--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -50,7 +50,7 @@
     components: {
       Dialog,
       PromisedDialog,
-      ConfirmationDialog
+      ConfirmationDialog,
     },
     methods: {
       refreshPromise() {
