--- a/packages/pos/simulator/view/partials/CreditCard.html
+++ b/packages/pos/simulator/view/partials/CreditCard.html
@@ -6,7 +6,7 @@
 
 <script>
   import Payment from '../../../api/payment.js';
-  import { State } from "../../libs/main.js";
+  import { State } from '../../libs/main.js';
 
   export default {
     data() {
