Fix stylelint on non html files

--- a/packages/styles/src/desktop/normalize.pcss
+++ b/packages/styles/src/desktop/normalize.pcss
@@ -136,7 +136,7 @@ progress {
  */
 
 [type='search'] {
-  -webkit-appearance: textfield; /* 1 */
+  appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
@@ -145,7 +145,7 @@ progress {
  */
 
 [type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 /**
@@ -154,7 +154,7 @@ progress {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
+  appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
 
