--- a/packages/styles/src/desktop/base.pcss
+++ b/packages/styles/src/desktop/base.pcss
@@ -26,6 +26,6 @@ abbr {
 code,
 kbd {
   font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono',
-    'Ubuntu Mono', Menlo, Courier, monospace;
+    'Ubuntu Mono', 'Menlo', 'Courier', monospace;
   user-select: auto;
 }
