--- a/packages/styles/src/setup/normalize.pcss
+++ b/packages/styles/src/setup/normalize.pcss
@@ -8,7 +8,7 @@
 
 html {
   height: 100%;
-  -webkit-text-size-adjust: 100%; /* 1 */
+  text-size-adjust: 100%; /* 1 */
 }
 
 /**
@@ -77,7 +77,7 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button;
+  appearance: button;
 }
 
 /**
