--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -1,6 +1,8 @@
 <label
   ref:container
-  class="input -{type} {readable ? 'is-readable' : ''}"
+  class="input type-{type}"
+  class:is-readable="readable"
+  class:is-invalid="!isValid"
   style="background-color: {bgColor}; color: {textColor};"
   on:mousedown="_onMousedown(event)"
 >
@@ -10,7 +12,7 @@
 
   <input
     ref:input
-    class="-{align}"
+    class="align-{align}"
     type={_visible ? 'text' : 'password'}
     style="color: {textColor};" {disabled}
     on:focus="_onFocus(event)"
@@ -53,6 +55,7 @@
         /** Force the to be focused */
         forceFocus: false,
         disabled: false,
+        isFocused: false,
         /** Style */
         type: 'text',
         align: 'right',
@@ -86,14 +89,15 @@
       }
     },
     onupdate({ changed, current }) {
-      if (changed._errorMsg
-        && current._errorMsg
-        && current.validateOn === 'input'
+      if (
+        changed._errorMsg &&
+        current._errorMsg &&
+        current.validateOn === 'input'
       ) {
         this.refs.input.scrollIntoView(false);
       }
 
-      if(changed.value) {
+      if (changed.value) {
         this.refs.input.value = current.value;
       }
     },
@@ -116,6 +120,7 @@
       _onFocus() {
         const { alphanumeric } = this.get();
         this.refs.container.classList.add('is-focused');
+        this.set({ isFocused: true });
         if (alphanumeric) {
           Keyboard.setKeyboardAsAlphanumeric();
         } else {
@@ -124,13 +129,14 @@
       },
       _onBlur(e) {
         const { alphanumeric, forceFocus } = this.get();
-        if(forceFocus) {
+        if (forceFocus) {
           e.stopImmediatePropagation();
           e.preventDefault();
           /** onBlur can be fired just before a <Input/> destruction */
           setTimeout(() => this.refs.input && this.focus());
           return;
         }
+        this.set({ isFocused: false });
         this.refs.container.classList.remove('is-focused');
         if (alphanumeric) {
           Keyboard.setKeyboardAsNumeric();
@@ -143,7 +149,7 @@
 
         if (key === 'enter') {
           const { validateOn } = this.get();
-          if(validateOn === 'submit') {
+          if (validateOn === 'submit') {
             const validationResult = this._getValidationResult();
 
             this.set(validationResult);
@@ -160,9 +166,9 @@
         const { value } = this.refs.input;
         const { validation, validateOn } = this.get();
 
-        if(validation) {
+        if (validation) {
           if (validateOn === 'input') {
-            const validationResult = (!value.length)
+            const validationResult = !value.length
               ? { isValid: false, _errorMsg: undefined }
               : this._getValidationResult();
 
@@ -240,10 +246,18 @@
     font-size: 30px;
     height: 36px;
     /* border-bottom: 1px dotted #dedede; */
-  }
 
-  input:not(.-left) {
-    text-align: right;
+    &.align-right {
+      text-align: right;
+    }
+
+    &.align-left {
+      text-align: left;
+    }
+
+    &.align-center {
+      text-align: center;
+    }
   }
 
   input[type='text'] {
