--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -24,6 +24,8 @@ $row-border-color: $gray-lighter;
 
 $input-border-color: $gray-lighter;
 $input-focus-border-color: $stone-green;
+$input-invalid-border-color: $red-light;
+$input-error-color: $red-light;
 
 $dialog-negative-color: $red-light;
 $dialog-positive-color: $stone-green;
