Removendo flag de abrir o Dialog

--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -38,7 +38,7 @@
     </button>
   </div>
 
-  <ConfirmationDialog ref:confirmationDialog isOpen={true} title="IMPRESSORA SEM PAPEL">
+  <ConfirmationDialog ref:confirmationDialog title="IMPRESSORA SEM PAPEL">
     Tentar imprimir novamente?
   </ConfirmationDialog>
 </div>
