--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -23,7 +23,7 @@
     on:failure="console.log(event)"
   >
     {#await promise}
-      Loading....
+      Loading...
     {:then }
       Success!!!
     {:catch }
