Dedupe no-params-reassign

--- a/packages/pos/simulator/view/partials/ControlPanel.html
+++ b/packages/pos/simulator/view/partials/ControlPanel.html
@@ -57,11 +57,11 @@
     },
     methods: {
       handlePanelUpdate({ changed, current, previous }) {
-        if(previous) {
+        if (previous) {
           Object.keys(changed).forEach(key => {
-            if(changed[key] && key !== 'namespace') {
+            if (changed[key] && key !== 'namespace') {
               const value = current[key];
-              if(key.indexOf(`${current.namespace}.`) === -1) {
+              if (key.indexOf(`${current.namespace}.`) === -1) {
                 key = `${current.namespace}.${key}`;
               }
               State.set(key, value, false);
@@ -72,10 +72,9 @@
       add(panelConstructor, initialData) {
         const { panels } = this.get();
 
-        this.set({ panels: [
-          ...panels,
-          [panelConstructor, initialData],
-        ]});
+        this.set({
+          panels: [...panels, [panelConstructor, initialData]],
+        });
       },
       handleShortcutStroke() {
         const keypressTime = new Date();
