Format some svelte files

--- a/packages/components/Dialog/src/ConfirmationDialog.html
+++ b/packages/components/Dialog/src/ConfirmationDialog.html
@@ -21,7 +21,7 @@
       Dialog: './Dialog.html',
     },
     computed: {
-      _dialogProps: (props) => props,
+      _dialogProps: props => props,
     },
     methods: {
       open() {
