--- a/packages/components/Progress/src/ProgressBar.html
+++ b/packages/components/Progress/src/ProgressBar.html
@@ -20,10 +20,7 @@
         return typeof progress === 'undefined' ? 'is-infinite' : '';
       },
       style({ color, height }) {
-        return [
-          `background-color:${color}`,
-          `height:${height}`,
-        ].join(';');
+        return [`background-color:${color}`, `height:${height}`].join(';');
       },
     },
   };
