--- a/packages/components/Barcode/src/Barcode.html
+++ b/packages/components/Barcode/src/Barcode.html
@@ -8,7 +8,8 @@
 <script>
   import generateBarcode from 'jsbarcode';
 
-  const cssStrToNumber = str => (typeof str !== 'string' ? str : parseFloat(str.replace(/[^0-9.]*$/, '')));
+  const cssStrToNumber = str =>
+    typeof str !== 'string' ? str : parseFloat(str.replace(/[^0-9.]*$/, ''));
 
   let reusableCanvas;
 
@@ -22,9 +23,7 @@
       };
     },
     oncreate() {
-      const {
-        data, height, barWidth: width,
-      } = this.get();
+      const { data, height, barWidth: width } = this.get();
 
       if (!reusableCanvas) {
         reusableCanvas = document.createElement('canvas');
