--- a/packages/components/QRCode/src/QRCode.html
+++ b/packages/components/QRCode/src/QRCode.html
@@ -29,9 +29,7 @@
       };
     },
     onupdate({ current }) {
-      const {
-        size, color, value, level,
-      } = current;
+      const { size, color, value, level } = current;
 
       qrEl.set({
         size: SIZES[String(size).toUpperCase()] || 140,
