--- a/packages/components/Range/src/Range.html
+++ b/packages/components/Range/src/Range.html
@@ -32,24 +32,22 @@
         barColor: '#000',
       };
     },
+    computed: {
+      barWidth: ({ value, max, min, unit }) => {
+        if (unit === '%') {
+          return (value / max) * 100;
+        }
+        return ((value - min) / (max - min)) * 100;
+      },
+      buttonStyle({ mainColor }) {
+        return `background-color: ${mainColor}`;
+      },
+    },
     oncreate() {
       if (!this.options.data || typeof this.options.data.value === 'undefined') {
         const { min, max } = this.get();
         this.set({ value: (max + min) / 2 });
       }
-    },
-    computed: {
-      barWidth: ({
-        value, max, min, unit,
-      }) => {
-        if (unit === '%') {
-          return value / max * 100;
-        }
-        return (value - min) / (max - min) * 100;
-      },
-      buttonStyle({ mainColor }) {
-        return `background-color: ${mainColor}`;
-      },
     },
     methods: {
       decrement() {
